--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
     <groupId>com.example</groupId>
     <artifactId>Leetcode</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>test</name>
-    <description>test</description>
+    <name>Leetcode</name>
+    <description>Leetcode</description>
     <properties>
         <java.version>17</java.version>
     </properties>
